# CamRenamer

./: README.md  pyproject.toml
.github/workflows/: build-release.yaml
src/: main.py  resources.qrc
